[metadata]
name = Ryu SDN-IP
summary = SDN-IP application Ryu version
license = MIT License
author = Software Defined Networking Developer Society
author-email = sdnds-tw@googlegroups.com
home-page = sdnds.tw
description-file = README.me
platform = any
classifier =
    License :: OSI Approved :: MIT License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Operating System :: Unix
keywords =
    openflow
    bgp

[files]
packages =
    sdnip
